# vidmagikAgent

./: .coverage  .dockerignore  .env.example  .gitignore  CUSTOM_FX.md  Dockerfile  LICENSE  README.md  docker-compose.yml  inspect_moviepy.py  main.py  pyproject.toml
api/: main.py
api/custom_fx/: chroma_key.py  clone_grid.py  kaleidoscope.py
app/: mcp_client.py
src/: main.py
src/api/: main.py
src/api/custom_fx/: __init__.py  auto_framing.py  highlight_detect.py  kaleidoscope_cube.py  matrix.py  quad_mirror.py  rgb_sync.py  rotating_cube.py
src/app/: Dockerfile  main.py  mcp_client.py
tests/: frontend_e2e_test.py  test_e2e.py  test_nicegui_integration.py
