[project]
name = "vidmagik-mcp"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.0.0",
    "litellm>=1.40.0",
    "moviepy>=2.2.1",
    "nicegui>=2.0.0",
    "numexpr>=2.14.1",
    "opencv-contrib-python-headless>=4.13.0.92",
    "pytest>=9.0.2",
    "yt-dlp>=2024.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
